Setup some models for sequelize, and some basic setup for handlebars

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "",
+    "password": "root",
+    "port": 8889,
+    "database": "codatunes",
     "host": "localhost",
     "dialect": "mysql"
   },
