--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
+    "googleapis": "^22.1.0",
     "method-override": "^2.3.9",
     "mysql2": "^1.4.2",
     "sequelize": "^4.8.4"
