--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/papergrapefruit/Group3Project#readme",
   "dependencies": {
     "body-parser": "^1.18.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
     "googleapis": "^22.1.0",
